# physical_simulations

./: .gitignore  README.md  pyproject.toml
.cursor/: rule_markdown.mdc
src/: a.ipynb  physical_simulations.code-workspace
src/async/: async.py  test.py
src/brownian/: main.py  video.py  video3d.py
src/coupled_mas/: coupled_mas.py
src/curricular/mathematics_methods_lab_01/: 1_de_simbolic.py  2_euler.py  3_numerical.py  4_wronskian.py  export_analitico_jpg.sh  main.tex
src/de_integration_me/: vector_field_finite_difference.py  vector_field_naive.py  vector_field_rk.py
src/descompositions/: qr.py
src/dft/: dft.py
src/differential_equations/: de_numerical.py  de_numerical_simple.py  de_simbolic.py  wronskian.py
src/double_pendulum/: main.py  test.py  visual.py
src/hidrogen_density/: contour.py  isosurface.py  xz_plane.py  xz_plane_6.py
src/integrals/: complex_integral.py  line_integral.py  riemann.py  surface_integral.py
src/kans/: main.py
src/least_squares/: least_squares.py
src/media/Tex/: 593a551d8401d855.tex
src/metropolis_hasting/: MH.py
src/optics/: cauchy_dispersion.py  index.py  refraction.py
src/physi/: main.py
src/physi/curricular/mm_lab_04/scripts/: prob1.py  prob2.py  prob3.py  prob4.py
src/physi/descompositions/: gram_schmidt.py
src/physi/double_pendulum/: double_pendulum.py  visual.py
src/physi/magnetic_field/: magnetic_field.py
src/physi/metropolis_hasting/: metropolis_hasting.py
src/spherical_armonics/: main.py  script.sh
src/vector_fields/: vector_fields.py
